fixed dark mode styles and logo alignment

--- a/src/components/DarkeModeBtn.module.css
+++ b/src/components/DarkeModeBtn.module.css
@@ -16,13 +16,26 @@
 
     @media screen and (max-width: 768px) {
         .btnDarkMode{
-          position: absolute;
-          right: 13%;
+            position: fixed;
+            top: -10px;
+            right: -5px;
+            width: 50px;
+            height: 50px;
             padding: 10px;
             line-height: 1;
-            font-size: 26px;
+            font-size: 20px;
             background-color: transparent;
+            animation: darkModeToggle 1s ease-in-out infinite alternate;
+            border: none;
 
+          }
+          @keyframes darkModeToggle {
+            0% {
+              opacity: 0.5; ;
+            }
+            100% {
+              opacity: 1;
+            }
           }
 
     }
